latest edit for submission

--- a/index.html
+++ b/index.html
@@ -6,42 +6,40 @@
 </head>
 <body>
 
-<header>HEADER BAND BIO: Imperial Teen</header>
+<header>'NEW BAND' typed in "HEADER"</header>
+
 <nav>
 	<ul>
-  <li><a href="#home">N</a></li>
-  <li><a href="#news">Ul</a></li>
-  <li><a href="#discography">li</a></li>
-  <li><a href="#band members">a href="#band members"</a></li>
+  <li><a href="#Fake link">Fake link #1 & unordered list ("ul"), list item ("li") created in "Nav"</a></li>
+  <li><a href="#Fake link">Fake link #2 & unordered list ("ul"), list item ("li") created in "Nav"</a></li>
+  <li><a href="#Fake link">Fake link #3 & unordered list ("ul"), list item ("li") created in "Nav"</a></li>
+  <li><a href="#Fake link">Fake link #4 & unordered list ("ul"), list item ("li") created in "Nav"</a></li>
 	</ul>
 </nav>	
-	
-<section>
 
-<article>
-	<h1>Heading towards obl1vi--one</h1>
-	<h2>Heading 2words in Section</h2>
-	<h3>Heading 3</h3>
+<div class="container">
+	<section>
 
-</article>
+		<article>
+			<h1>"Heading 1" in "Article" in "Section" in "Div"</h1>
+			<h2>"Heading 2" in "Article," "Section" and  "Div"</h2>
+			<h3>"Heading 3" in "Article," "Section" and "Div"</h3>
+		
+		</article>
+		
+		
+		
+	</section>
+		
+	<aside>
+		<p> "YADA YADA YADA is a "Paragraph" I wrote to float right inside the "Aside" 
+		</p>
 
-<p> "Why you gotta be so proud? I'm the one with lipstick on" - lyrical paragraph from "Lipstick"</p>
-
-</section>
-
-<aside></aside>
-	
-	<br>
-	<br>
-	<br>
-	<br>
+	</aside>
+</div>
 
 
 <footer> footer Links</footer>	
-
-
-
-
 
 
 </body>
