--- a/index.html
+++ b/index.html
@@ -21,26 +21,27 @@
 	<section>
 
 		<article>
-			<h1>"Heading 1" in "Article" in "Section" in "Div"</h1>
-			<h2>"Heading 2" in "Article," "Section" and  "Div"</h2>
-			<h3>"Heading 3" in "Article," "Section" and "Div"</h3>
-		
-		</article>
-		
-		
-		
+			<h1>"Heading 1" in "Article"  "Section" in "Div"</h1>
+			<h2>"Heading 2" in "Article," "Section" in "Div"</h2>
+			<h3>"Heading 3" in "Article," "Section" in "Div"</h3>
+		</article>	
+	<p>
+	YADA YADA "Paragraph"
+	</p>
 	</section>
-		
+
 	<aside>
-		<p> "YADA YADA YADA is a "Paragraph" I wrote to float right inside the "Aside" 
-		</p>
+	"Aside"
+	<br>
+	<br>
+	<br>
 
 	</aside>
+
 </div>
 
 
-<footer> footer Links</footer>	
-
+<footer> "Footer" Links</footer>	
 
 </body>
 </html>
